[package]
name = "fsds-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
# MessagePack encoder/decoder
rmp = "0.8.14"
msgpack-rpc = "0.4.2"

# Async runtime
tokio = { version = "1.40.0", features = ["net", "macros"] }
tokio-util = "0.7.12"

# Utils
anyhow = "1.0.87"
struct_iterable = "0.1.1"

# Derive
fsds-rs-derive = { path = "./fsds-rs-derive" }

[dev-dependencies]
# ONNX runtime
ort = "2.0.0-rc.4"

# Image processing
image = "0.25.2"
ndarray = "0.16.1"
raqote = "0.8.4"

# Utils
csv = "1.3.0"
