[package]
license = "GPL-3.0"
name = "fsds-rs-derive"
description = "Derive macro for fsds-rs."
keywords = ["simulator", "api", "api-client", "driverless-car", "formula student", "driverless"]
repository = "https://github.com/lorenzodellagiustina/fsds-rs"
readme = "README.md"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
